--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.0",
-    "angular": "~1.4.3",
     "angular-mocks": "~1.4.4"
+  },
+  "resolutions": {
+    "angular": "1.4.3"
   }
 }
